Initial import of swagger models list controller
Updated swagger codegen to only generate models.

Swagger does not support webflux.  Will use swagger codegen v3 to
generate webflux controllers with mustashe templates.
